fixes z-index for user icon while centered search bar is active, mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2128,7 +2128,7 @@ hr {
     height: 57px;
     display: inline-block;
     position: absolute;
-    z-index: 10;
+    z-index: 2;
   }
   
   .dd-login-button {
